--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AlchemyPaintOS - Warhammer 40K Painting Reference</title>
   <link rel="stylesheet" href="styles/design-system.css">
+  <style>
+    body {
+      background-image: url('./assets/grimdark-bg.png');
+      background-attachment: fixed;
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center;
+    }
+  </style>
 </head>
 <body>
   <header>
@@ -16,6 +25,7 @@
       <a href="lore.html" class="nav-btn">Lore</a>
     </div>
   </header>
+
 
   <main>
     <!-- Search & Filter Section -->
@@ -32,11 +42,13 @@
       </div>
     </section>
 
+
     <!-- Placeholder Message (shows until faction selected) -->
     <section id="placeholder-section" style="text-align: center; padding: var(--space-2xl); margin-top: var(--space-2xl);">
       <h2 style="color: var(--color-accent-gold); font-size: var(--font-size-2xl); margin-bottom: var(--space-md);">Choose A Faction</h2>
       <p style="color: var(--color-text-secondary); font-size: var(--font-size-base);">Select a faction from the dropdown above to view painting recipes</p>
     </section>
+
 
     <!-- Recipe Cards Section (hidden until faction selected) -->
     <section id="recipes-section" style="display: none;">
@@ -46,6 +58,7 @@
         </div>
       </div>
     </section>
+
 
     <!-- Recipe Detail Modal -->
     <div id="recipe-detail-modal" class="modal">
@@ -58,15 +71,18 @@
     </div>
   </main>
 
+
   <footer style="padding: var(--space-lg); color: var(--color-text-secondary); font-size: var(--font-size-xs); border-top: 2px solid var(--color-accent-gold); text-align: center; text-transform: uppercase; letter-spacing: 0.05em;">
     <div id="footer-status">Initializing...</div>
   </footer>
+
 
   <script src="js/data-loader.js"></script>
   <script>
     const app = {
       dataLoader: null,
       currentFilters: { faction: '', search: '' },
+
 
       async init() {
         console.log('🎨 Initializing AlchemyPaintOS...');
@@ -83,6 +99,7 @@
         }
       },
 
+
       setup() {
         const factionSelect = document.getElementById('faction-select');
         const searchInput = document.getElementById('search-recipes');
@@ -96,11 +113,13 @@
           factionSelect.appendChild(opt);
         });
 
+
         // Faction filter listener
         factionSelect.addEventListener('change', (e) => {
           this.currentFilters.faction = e.target.value;
           this.render();
         });
+
 
         // Search listener
         searchInput.addEventListener('input', (e) => {
@@ -108,20 +127,24 @@
           this.render();
         });
 
+
         // Modal close listeners
         document.getElementById('modal-close').addEventListener('click', () => {
           document.getElementById('recipe-detail-modal').classList.remove('active');
         });
+
 
         document.getElementById('modal-overlay').addEventListener('click', () => {
           document.getElementById('recipe-detail-modal').classList.remove('active');
         });
       },
 
+
       render() {
         const placeholderSection = document.getElementById('placeholder-section');
         const recipesSection = document.getElementById('recipes-section');
         const container = document.getElementById('recipes-container');
+
 
         // If no faction selected, show placeholder
         if (!this.currentFilters.faction) {
@@ -130,9 +153,11 @@
           return;
         }
 
+
         // Faction is selected, hide placeholder and show recipes
         placeholderSection.style.display = 'none';
         recipesSection.style.display = 'block';
+
 
         let recipes = [...this.dataLoader.recipes];
         
@@ -140,6 +165,7 @@
         if (this.currentFilters.faction) {
           recipes = recipes.filter(r => r.faction === this.currentFilters.faction);
         }
+
 
         // Filter by search
         if (this.currentFilters.search) {
@@ -149,12 +175,15 @@
           );
         }
 
+
         container.innerHTML = '';
+
 
         if (recipes.length === 0) {
           container.innerHTML = '<div class="card" style="grid-column: 1 / -1; text-align: center;"><p style="color: var(--color-text-secondary);">No recipes found for this faction</p></div>';
           return;
         }
+
 
         recipes.forEach(recipe => {
           const card = document.createElement('div');
@@ -181,6 +210,7 @@
         });
       },
 
+
       showDetail(recipe) {
         document.getElementById('modal-recipe-name').textContent = this.sanitize(recipe.name);
         const steps = this.dataLoader.getRecipeSteps(recipe.id);
@@ -194,6 +224,7 @@
             <p style="font-size: var(--font-size-sm); margin-top: var(--space-sm);">${this.sanitize(s.description)}</p>
           </div>
         `).join('') : '<p style="color: var(--color-text-secondary);">No steps available</p>';
+
 
         document.getElementById('modal-recipe-body').innerHTML = `
           <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap: var(--space-md); margin-bottom: var(--space-lg);">
@@ -224,12 +255,14 @@
         document.getElementById('recipe-detail-modal').classList.add('active');
       },
 
+
       sanitize(text) {
         const div = document.createElement('div');
         div.textContent = text || '';
         return div.innerHTML;
       }
     };
+
 
     document.addEventListener('DOMContentLoaded', () => app.init());
   </script>
