--- a/src/lore.html
+++ b/src/lore.html
@@ -24,7 +24,6 @@
       padding: var(--space-xl) 0;
     }
 
-
     .faction-tile {
       background-color: var(--color-bg-secondary);
       border: 1px solid var(--color-border);
@@ -41,7 +40,6 @@
       overflow: hidden;
     }
 
-
     .faction-tile::before {
       content: '';
       position: absolute;
@@ -53,27 +51,26 @@
       transition: height var(--transition-normal);
     }
 
-
     .faction-tile:hover {
       border-color: var(--color-accent-teal);
       box-shadow: var(--shadow-lg);
       transform: translateY(-6px);
     }
 
-
     .faction-tile:hover::before {
       height: 6px;
     }
 
-
     .faction-tile h3 {
-      color: var(--color-text-heading);
+      color: #A68B5B;
       font-size: var(--font-size-lg);
       margin: 0;
       position: relative;
       z-index: 1;
+      text-transform: uppercase;
+      letter-spacing: 0.05em;
+      font-weight: 600;
     }
-
 
     /* Lore modal content styling */
     #modal-body h1 {
@@ -84,11 +81,9 @@
       padding-bottom: var(--space-md);
     }
 
-
     #modal-body h1:first-child {
       margin-top: 0;
     }
-
 
     #modal-body h2 {
       color: var(--color-accent-green);
@@ -96,13 +91,11 @@
       font-size: var(--font-size-lg);
     }
 
-
     #modal-body h3 {
       color: var(--color-accent-teal);
       margin: var(--space-md) 0 var(--space-sm) 0;
       font-size: var(--font-size-md);
     }
-
 
     #modal-body p {
       margin: var(--space-sm) 0;
@@ -110,18 +103,15 @@
       color: var(--color-text-primary);
     }
 
-
     #modal-body ul,
     #modal-body ol {
       margin: var(--space-sm) 0 var(--space-sm) var(--space-lg);
       color: var(--color-text-primary);
     }
 
-
     #modal-body li {
       margin: var(--space-2xs) 0;
     }
-
 
     #modal-body code {
       background-color: var(--color-bg-tertiary);
@@ -131,7 +121,6 @@
       font-family: 'Courier New', monospace;
       font-size: var(--font-size-sm);
     }
-
 
     #modal-body pre {
       background-color: var(--color-bg-tertiary);
@@ -143,7 +132,6 @@
       color: var(--color-accent-teal);
     }
 
-
     #modal-body blockquote {
       border-left: 3px solid var(--color-accent-teal);
       padding-left: var(--space-md);
@@ -152,25 +140,21 @@
       font-style: italic;
     }
 
-
     #modal-body a {
       color: var(--color-accent-teal);
       text-decoration: none;
       transition: color var(--transition-fast);
     }
 
-
     #modal-body a:hover {
       color: var(--color-accent-teal-hover);
       text-decoration: underline;
     }
 
-
     #modal-body strong {
       color: var(--color-accent-green);
       font-weight: 600;
     }
-
 
     #modal-body em {
       color: var(--color-accent-teal);
@@ -185,11 +169,9 @@
     </div>
   </header>
 
-
   <main>
     <div id="grid" class="lore-grid"></div>
   </main>
-
 
   <!-- Lore Modal -->
   <div id="modal" class="modal">
@@ -200,22 +182,18 @@
     </div>
   </div>
 
-
   <script>
     function closeModal() {
       document.getElementById('modal').classList.remove('active');
     }
 
-
     document.getElementById('modal-close').addEventListener('click', closeModal);
     document.getElementById('modal-overlay').addEventListener('click', closeModal);
-
 
     // Keyboard close
     document.addEventListener('keydown', (e) => {
       if (e.key === 'Escape') closeModal();
     });
-
 
     // Load faction data
     const timestamp = Date.now();
