--- a/src/lore.html
+++ b/src/lore.html
@@ -4,81 +4,195 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Warhammer 40K Factions - Lore</title>
-  <link rel="stylesheet" href="styles/design-system.css">
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/marked@11.1.1/marked.min.js"></script>
   <style>
-    body {
-      background-image: url('./assets/grimdark-bg.png');
-      background-attachment: fixed;
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-position: center;
+    :root {
+      --color-bg-primary: #050810;
+      --color-bg-secondary: #0f1419;
+      --color-text-primary: #f5f5f5;
+      --color-text-secondary: #a7a9a9;
+      --color-accent-gold: #d4af37;
+      --color-accent-teal: #32b8c6;
+      --color-success: #22c55e;
     }
 
-    /* Lore-specific styles */
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+
+    body {
+      background-color: var(--color-bg-primary);
+      background-image: url('./Assets/grimdark-bg.png');
+      background-attachment: fixed;
+      background-size: cover;
+      color: var(--color-text-primary);
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+      line-height: 1.6;
+      padding: 24px;
+    }
+
+    .header {
+      margin-bottom: 32px;
+      border-bottom: 2px solid #a68b5b;
+      padding-bottom: 24px;
+    }
+
+    .header h1 {
+      font-size: 2.5rem;
+      color: #A68B5B;
+      margin-bottom: 8px;
+      text-transform: uppercase;
+      letter-spacing: 0.05em;
+    }
+
+    .nav-btn {
+      background: #8b7355;
+      color: #f5f5f5;
+      padding: 10px 20px;
+      border-radius: 4px;
+      text-decoration: none;
+      font-weight: 600;
+      display: inline-block;
+      margin-top: 16px;
+      transition: all 0.3s ease;
+      border: none;
+      cursor: pointer;
+    }
+
+    .nav-btn:hover {
+      background: #a68b5b;
+      color: #050810;
+    }
+
     .lore-grid {
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
-      gap: var(--space-lg);
-      padding: var(--space-xl) 0;
+      gap: 24px;
+      padding: 32px 0;
     }
 
     .faction-tile {
       background-color: var(--color-bg-secondary);
-      border: 1px solid var(--color-border);
-      border-radius: 0.5rem;
-      padding: var(--space-lg);
+      border: 1px solid rgba(212, 175, 55, 0.3);
+      border-radius: 8px;
+      padding: 24px;
       cursor: pointer;
       text-align: center;
-      transition: all var(--transition-normal);
+      transition: all 0.3s ease;
       min-height: 120px;
       display: flex;
       align-items: center;
       justify-content: center;
-      position: relative;
-      overflow: hidden;
-    }
-
-    .faction-tile::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      height: 3px;
-      background: linear-gradient(90deg, var(--color-accent-teal), var(--color-accent-green));
-      transition: height var(--transition-normal);
     }
 
     .faction-tile:hover {
-      border-color: var(--color-accent-teal);
-      box-shadow: var(--shadow-lg);
+      border-color: var(--color-accent-gold);
+      box-shadow: 0 0 20px rgba(212, 175, 55, 0.2);
       transform: translateY(-6px);
-    }
-
-    .faction-tile:hover::before {
-      height: 6px;
     }
 
     .faction-tile h3 {
       color: #A68B5B;
-      font-size: var(--font-size-lg);
+      font-size: 1.1rem;
       margin: 0;
-      position: relative;
-      z-index: 1;
       text-transform: uppercase;
       letter-spacing: 0.05em;
       font-weight: 600;
     }
 
-    /* Lore modal content styling */
+    /* Modal Styling */
+    .modal {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.92);
+      z-index: 1000;
+      align-items: center;
+      justify-content: center;
+      animation: fadeIn 0.2s ease-in-out;
+    }
+
+    .modal.active {
+      display: flex;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
+
+    .modal-content {
+      background: linear-gradient(135deg, #0a0e17 0%, #050810 100%);
+      border: 1px solid #8b7355;
+      border-radius: 8px;
+      padding: 40px;
+      max-width: 900px;
+      max-height: 90vh;
+      overflow-y: auto;
+      position: relative;
+      box-shadow: 0 20px 60px rgba(0, 0, 0, 0.95), inset 0 1px 0 rgba(139, 115, 85, 0.2);
+      animation: slideUp 0.3s ease-out;
+    }
+
+    @keyframes slideUp {
+      from {
+        transform: translateY(20px);
+        opacity: 0;
+      }
+      to {
+        transform: translateY(0);
+        opacity: 1;
+      }
+    }
+
+    .modal-close {
+      position: absolute;
+      top: 12px;
+      right: 12px;
+      background: #8b7355;
+      color: #050810;
+      border: none;
+      width: 36px;
+      height: 36px;
+      border-radius: 50%;
+      font-size: 20px;
+      cursor: pointer;
+      transition: all 0.2s ease;
+      font-weight: bold;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .modal-close:hover {
+      background: #a68b5b;
+      transform: scale(1.1);
+    }
+
+    /* Modal Content Styling */
+    #modal-body {
+      color: #e0dcd4;
+      font-size: 15px;
+      line-height: 1.7;
+      letter-spacing: 0.2px;
+    }
+
     #modal-body h1 {
-      color: var(--color-accent-teal);
-      margin: var(--space-lg) 0 var(--space-md) 0;
-      font-size: var(--font-size-xl);
-      border-bottom: 2px solid var(--color-accent-green);
-      padding-bottom: var(--space-md);
+      color: #d4af37;
+      margin: 0 0 20px 0;
+      font-size: 28px;
+      border-bottom: 2px solid #8b7355;
+      padding-bottom: 12px;
+      text-transform: uppercase;
+      letter-spacing: 0.08em;
+      font-weight: 700;
+      line-height: 1.2;
     }
 
     #modal-body h1:first-child {
@@ -86,94 +200,163 @@
     }
 
     #modal-body h2 {
-      color: var(--color-accent-green);
-      margin: var(--space-lg) 0 var(--space-sm) 0;
-      font-size: var(--font-size-lg);
+      color: #a68b5b;
+      margin: 28px 0 14px 0;
+      font-size: 20px;
+      text-transform: uppercase;
+      letter-spacing: 0.05em;
+      font-weight: 600;
+      border-left: 3px solid #8b7355;
+      padding-left: 12px;
     }
 
     #modal-body h3 {
-      color: var(--color-accent-teal);
-      margin: var(--space-md) 0 var(--space-sm) 0;
-      font-size: var(--font-size-md);
+      color: #b89968;
+      margin: 20px 0 10px 0;
+      font-size: 16px;
+      font-weight: 600;
+      text-transform: uppercase;
+      letter-spacing: 0.05em;
     }
 
     #modal-body p {
-      margin: var(--space-sm) 0;
+      margin: 14px 0;
       line-height: 1.8;
-      color: var(--color-text-primary);
+      color: #e0dcd4;
+      font-size: 15px;
+      text-align: justify;
     }
 
     #modal-body ul,
     #modal-body ol {
-      margin: var(--space-sm) 0 var(--space-sm) var(--space-lg);
-      color: var(--color-text-primary);
+      margin: 14px 0 14px 28px;
+      color: #e0dcd4;
+      font-size: 15px;
+      line-height: 1.7;
     }
 
     #modal-body li {
-      margin: var(--space-2xs) 0;
+      margin: 6px 0;
+      padding-left: 6px;
     }
 
     #modal-body code {
-      background-color: var(--color-bg-tertiary);
-      color: var(--color-accent-teal);
-      padding: var(--space-2xs) var(--space-xs);
-      border-radius: 0.25rem;
+      background-color: rgba(5, 8, 15, 0.9);
+      color: #b89968;
+      padding: 3px 6px;
+      border-radius: 3px;
       font-family: 'Courier New', monospace;
-      font-size: var(--font-size-sm);
+      font-size: 13px;
+      border: 1px solid #8b7355;
     }
 
     #modal-body pre {
-      background-color: var(--color-bg-tertiary);
-      border-left: 3px solid var(--color-accent-green);
-      padding: var(--space-md);
-      border-radius: 0.5rem;
+      background-color: rgba(0, 0, 0, 0.8);
+      border-left: 3px solid #8b7355;
+      padding: 14px;
+      border-radius: 4px;
       overflow-x: auto;
-      margin: var(--space-md) 0;
-      color: var(--color-accent-teal);
+      margin: 20px 0;
+      color: #b89968;
+      font-size: 13px;
+      line-height: 1.6;
     }
 
     #modal-body blockquote {
-      border-left: 3px solid var(--color-accent-teal);
-      padding-left: var(--space-md);
-      margin: var(--space-md) 0;
-      color: var(--color-text-secondary);
+      border-left: 3px solid #a68b5b;
+      padding: 14px;
+      padding-left: 20px;
+      margin: 20px 0;
+      background: rgba(139, 115, 85, 0.08);
+      color: #c9b8a0;
       font-style: italic;
+      border-radius: 3px;
     }
 
     #modal-body a {
-      color: var(--color-accent-teal);
+      color: #a68b5b;
       text-decoration: none;
-      transition: color var(--transition-fast);
+      transition: all 0.2s ease;
+      font-weight: 500;
+      border-bottom: 1px solid transparent;
     }
 
     #modal-body a:hover {
-      color: var(--color-accent-teal-hover);
-      text-decoration: underline;
+      color: #d4af37;
+      border-bottom: 1px solid #d4af37;
     }
 
     #modal-body strong {
-      color: var(--color-accent-green);
+      color: #d4af37;
       font-weight: 600;
     }
 
     #modal-body em {
-      color: var(--color-accent-teal);
+      color: #a68b5b;
+      font-style: italic;
+    }
+
+    #modal-body hr {
+      border: none;
+      height: 1px;
+      background: rgba(139, 115, 85, 0.4);
+      margin: 28px 0;
+    }
+
+    .modal-content::-webkit-scrollbar {
+      width: 10px;
+    }
+
+    .modal-content::-webkit-scrollbar-track {
+      background: rgba(139, 115, 85, 0.08);
+      border-radius: 4px;
+    }
+
+    .modal-content::-webkit-scrollbar-thumb {
+      background: #8b7355;
+      border-radius: 4px;
+    }
+
+    .modal-content::-webkit-scrollbar-thumb:hover {
+      background: #a68b5b;
+    }
+
+    @media (max-width: 768px) {
+      .modal-content {
+        max-width: 95vw;
+        max-height: 95vh;
+        padding: 28px 20px;
+        margin: 0 12px;
+      }
+
+      #modal-body {
+        font-size: 14px;
+      }
+
+      #modal-body h1 {
+        font-size: 24px;
+      }
+
+      #modal-body h2 {
+        font-size: 18px;
+      }
+
+      #modal-body h3 {
+        font-size: 15px;
+      }
     }
   </style>
 </head>
 <body>
-  <header>
-    <div class="header-content">
-      <h1 class="header-title">Warhammer 40K Factions</h1>
-      <a href="index.html" class="nav-btn">Home</a>
-    </div>
+  <header class="header">
+    <h1>Warhammer 40K Factions</h1>
+    <a href="index.html" class="nav-btn">← Home</a>
   </header>
 
   <main>
     <div id="grid" class="lore-grid"></div>
   </main>
 
-  <!-- Lore Modal -->
   <div id="modal" class="modal">
     <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; cursor: pointer;" id="modal-overlay"></div>
     <div class="modal-content">
@@ -190,14 +373,12 @@
     document.getElementById('modal-close').addEventListener('click', closeModal);
     document.getElementById('modal-overlay').addEventListener('click', closeModal);
 
-    // Keyboard close
     document.addEventListener('keydown', (e) => {
       if (e.key === 'Escape') closeModal();
     });
 
-    // Load faction data
     const timestamp = Date.now();
-    fetch(`./data/factions_lore.csv?v=${timestamp}`)
+    fetch(`./Data/factions_lore.csv?v=${timestamp}`)
       .then(r => r.text())
       .then(csv => {
         Papa.parse(csv, {
