Fixed search and mobile optimization

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
       background-position: center;
     }
 
+
     .header-logo {
       width: 100px;
       height: 100px;
@@ -22,11 +23,13 @@
       margin-right: var(--space-lg);
     }
 
+
     .header-title-group {
       display: flex;
       flex-direction: column;
       justify-content: center;
     }
+
 
     .header-title-group h1 {
       margin: 0;
@@ -36,6 +39,7 @@
       font-weight: 700;
     }
 
+
     .header-tagline {
       color: var(--color-text-secondary);
       font-size: 1.1rem;
@@ -44,6 +48,7 @@
       text-transform: uppercase;
       font-weight: 500;
     }
+
 
     #recipe-detail-modal {
       display: none;
@@ -55,15 +60,18 @@
       z-index: 1000;
     }
 
+
     #recipe-detail-modal.active {
       display: flex;
       align-items: center;
       justify-content: center;
     }
 
+
     #recipe-detail-modal.active #modal-overlay {
       display: block;
     }
+
 
     .modal-content {
       z-index: 1001;
@@ -87,6 +95,7 @@
     </div>
   </header>
 
+
   <main>
     <!-- Search & Filter Section -->
     <section class="search-section">
@@ -98,23 +107,25 @@
       </div>
       <div style="flex: 1;">
         <label for="search-recipes" class="search-label">Search Recipes</label>
-        <input id="search-recipes" type="text" class="search-input" placeholder="Search by name or description...">
+        <input id="search-recipes" type="text" class="search-input" placeholder="Search The Void...">
       </div>
     </section>
+
 
     <!-- Placeholder Message (shows until faction selected) -->
     <section id="placeholder-section" style="text-align: center; padding: var(--space-xl); margin-top: var(--space-xl);">
       <div style="background-color: rgba(5, 8, 15, 0.9); padding: var(--space-xl); border-radius: 0.5rem; border: 1px solid rgba(212, 175, 55, 0.4);">
         <h2 style="color: var(--color-accent-gold); font-size: var(--font-size-2xl); margin-bottom: var(--space-md);">
-          Choose A Faction
+          Choose A Faction or Search Recipes
         </h2>
         <p style="color: var(--color-text-secondary); font-size: var(--font-size-sm);">
-          Select a faction from the dropdown above to view painting recipes
+          Select a faction from the dropdown above or type in the search box to find painting recipes
         </p>
       </div>
     </section>
 
-    <!-- Recipe Cards Section (hidden until faction selected) -->
+
+    <!-- Recipe Cards Section (hidden until faction selected or search entered) -->
     <section id="recipes-section" style="display: none;">
       <div id="recipes-container" class="card-grid">
         <div class="card" style="grid-column: 1 / -1; text-align: center;">
@@ -122,6 +133,7 @@
         </div>
       </div>
     </section>
+
 
     <!-- Recipe Detail Modal -->
     <div id="recipe-detail-modal" class="modal">
@@ -134,9 +146,11 @@
     </div>
   </main>
 
+
   <footer style="padding: var(--space-lg); color: var(--color-text-secondary); font-size: var(--font-size-xs); border-top: 2px solid var(--color-accent-gold); text-align: center; text-transform: uppercase; letter-spacing: 0.05em;">
     <div id="footer-status">Initializing...</div>
   </footer>
+
 
   <!-- LOAD DATA-LOADER FIRST (before app script) -->
   <script src="js/data-loader.js"></script>
@@ -145,6 +159,7 @@
     const app = {
       dataLoader: null,
       currentFilters: { faction: '', search: '' },
+
 
       async init() {
         console.log('🎨 Initializing AlchemyPaintOS...');
@@ -166,6 +181,7 @@
         }
       },
 
+
       setup() {
         const factionSelect = document.getElementById('faction-select');
         const searchInput = document.getElementById('search-recipes');
@@ -178,19 +194,23 @@
           factionSelect.appendChild(opt);
         });
 
+
         factionSelect.addEventListener('change', (e) => {
           this.currentFilters.faction = e.target.value;
           this.render();
         });
+
 
         searchInput.addEventListener('input', (e) => {
           this.currentFilters.search = e.target.value.toLowerCase();
           this.render();
         });
 
+
         const closeModal = () => {
           document.getElementById('recipe-detail-modal').classList.remove('active');
         };
+
 
         document.getElementById('modal-close').addEventListener('click', closeModal);
         document.getElementById('modal-overlay').addEventListener('click', closeModal);
@@ -199,12 +219,30 @@
         });
       },
 
+
       render() {
         const placeholderSection = document.getElementById('placeholder-section');
         const recipesSection = document.getElementById('recipes-section');
         const container = document.getElementById('recipes-container');
 
-        if (!this.currentFilters.faction) {
+        let recipes = [...this.dataLoader.recipes];
+
+        // Apply search filter first (if user is searching without selecting faction)
+        if (this.currentFilters.search) {
+          recipes = recipes.filter(r => 
+            r.name.toLowerCase().includes(this.currentFilters.search) ||
+            r.description.toLowerCase().includes(this.currentFilters.search) ||
+            r.faction.toLowerCase().includes(this.currentFilters.search)
+          );
+        }
+
+        // Apply faction filter if selected
+        if (this.currentFilters.faction) {
+          recipes = recipes.filter(r => r.faction === this.currentFilters.faction);
+        }
+
+        // Show placeholder only if no faction selected AND no search results
+        if (!this.currentFilters.faction && !this.currentFilters.search) {
           placeholderSection.style.display = 'block';
           recipesSection.style.display = 'none';
           return;
@@ -213,24 +251,19 @@
         placeholderSection.style.display = 'none';
         recipesSection.style.display = 'block';
 
-        let recipes = [...this.dataLoader.recipes];
-        
-        if (this.currentFilters.faction) {
-          recipes = recipes.filter(r => r.faction === this.currentFilters.faction);
-        }
-
-        if (this.currentFilters.search) {
-          recipes = recipes.filter(r => 
-            r.name.toLowerCase().includes(this.currentFilters.search) ||
-            r.description.toLowerCase().includes(this.currentFilters.search)
-          );
-        }
-
         container.innerHTML = '';
 
         if (recipes.length === 0) {
-          container.innerHTML = '<div class="card" style="grid-column: 1 / -1; text-align: center;"><p style="color: var(--color-text-secondary);">No recipes found for this faction</p></div>';
+          const searchTerm = this.currentFilters.search ? `"${this.currentFilters.search}"` : 'this selection';
+          container.innerHTML = `<div class="card" style="grid-column: 1 / -1; text-align: center;"><p style="color: var(--color-text-secondary);">No recipes found for ${searchTerm}. Try a different search term.</p></div>`;
           return;
+        }
+
+        // Update footer with search results count
+        if (this.currentFilters.search) {
+          document.getElementById('footer-status').textContent = `Found ${recipes.length} recipes matching "${this.currentFilters.search}"`;
+        } else if (this.currentFilters.faction) {
+          document.getElementById('footer-status').textContent = `Showing ${recipes.length} recipes for ${this.currentFilters.faction}`;
         }
 
         recipes.forEach(recipe => {
@@ -257,6 +290,7 @@
         });
       },
 
+
       showDetail(recipe) {
         document.getElementById('modal-recipe-name').textContent = recipe.name;
         const steps = this.dataLoader.getRecipeSteps(recipe.id);
@@ -270,6 +304,7 @@
             <p style="font-size: var(--font-size-sm); margin-top: var(--space-sm);">${this.sanitize(s.description)}</p>
           </div>
         `).join('') : '<p style="color: var(--color-text-secondary);">No steps available</p>';
+
 
         document.getElementById('modal-recipe-body').innerHTML = `
           <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap: var(--space-md); margin-bottom: var(--space-lg);">
@@ -300,12 +335,14 @@
         document.getElementById('recipe-detail-modal').classList.add('active');
       },
 
+
       sanitize(text) {
         const div = document.createElement('div');
         div.textContent = text || '';
         return div.innerHTML;
       }
     };
+
 
     document.addEventListener('DOMContentLoaded', () => app.init());
   </script>
