--- a/src/lore.html
+++ b/src/lore.html
@@ -1,70 +1,74 @@
+xml
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Warhammer 40K Factions - Lore</title>
+  <title>Lore - AlchemyPaintOS</title>
+  <link rel="stylesheet" href="styles/design-system.css">
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/marked@11.1.1/marked.min.js"></script>
   <style>
-    :root {
-      --color-bg-primary: #050810;
-      --color-bg-secondary: #0f1419;
-      --color-text-primary: #f5f5f5;
-      --color-text-secondary: #a7a9a9;
-      --color-accent-gold: #d4af37;
-      --color-accent-teal: #32b8c6;
-      --color-success: #22c55e;
-    }
-
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-
     body {
-      background-color: var(--color-bg-primary);
-      background-image: url('./Assets/grimdark-bg.png');
+      background-image: url('./assets/grimdark-bg.png');
       background-attachment: fixed;
       background-size: cover;
-      color: var(--color-text-primary);
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-      line-height: 1.6;
-      padding: 24px;
+      background-repeat: no-repeat;
+      background-position: center;
     }
 
-    .header {
-      margin-bottom: 32px;
-      border-bottom: 2px solid #a68b5b;
-      padding-bottom: 24px;
+    .header-logo {
+      width: 100px;
+      height: 100px;
+      object-fit: contain;
+      margin-right: var(--space-lg);
     }
 
-    .header h1 {
-      font-size: 2.5rem;
-      color: #A68B5B;
-      margin-bottom: 8px;
-      text-transform: uppercase;
+    .header-title-group {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
+
+    .header-title-group h1 {
+      margin: 0;
+      font-size: 3.5rem;
       letter-spacing: 0.05em;
+      text-transform: uppercase;
+      font-weight: 700;
+    }
+
+    .header-tagline {
+      color: var(--color-text-secondary);
+      font-size: 1.1rem;
+      margin: var(--space-4) 0 0 0;
+      letter-spacing: 0.05em;
+      text-transform: uppercase;
+      font-weight: 500;
+    }
+
+    .nav-buttons {
+      display: flex;
+      gap: var(--space-md);
     }
 
     .nav-btn {
-      background: #8b7355;
-      color: #f5f5f5;
-      padding: 10px 20px;
-      border-radius: 4px;
+      padding: var(--space-sm) var(--space-md);
+      background-color: rgba(212, 175, 55, 0.1);
+      color: var(--color-accent-gold);
       text-decoration: none;
-      font-weight: 600;
-      display: inline-block;
-      margin-top: 16px;
-      transition: all 0.3s ease;
-      border: none;
+      border: 1px solid rgba(212, 175, 55, 0.3);
+      border-radius: 0.25rem;
+      font-size: var(--font-size-sm);
+      text-transform: uppercase;
+      letter-spacing: 0.05em;
+      transition: all 0.2s ease;
       cursor: pointer;
     }
 
     .nav-btn:hover {
-      background: #a68b5b;
-      color: #050810;
+      background-color: rgba(212, 175, 55, 0.2);
+      border-color: rgba(212, 175, 55, 0.5);
     }
 
     .lore-grid {
@@ -95,7 +99,7 @@
     }
 
     .faction-tile h3 {
-      color: #A68B5B;
+      color: var(--color-accent-gold);
       font-size: 1.1rem;
       margin: 0;
       text-transform: uppercase;
@@ -129,14 +133,14 @@
 
     .modal-content {
       background: linear-gradient(135deg, #0a0e17 0%, #050810 100%);
-      border: 1px solid #8b7355;
+      border: 1px solid var(--color-accent-gold);
       border-radius: 8px;
       padding: 40px;
       max-width: 900px;
       max-height: 90vh;
       overflow-y: auto;
       position: relative;
-      box-shadow: 0 20px 60px rgba(0, 0, 0, 0.95), inset 0 1px 0 rgba(139, 115, 85, 0.2);
+      box-shadow: 0 20px 60px rgba(0, 0, 0, 0.95), inset 0 1px 0 rgba(212, 175, 55, 0.2);
       animation: slideUp 0.3s ease-out;
     }
 
@@ -155,9 +159,9 @@
       position: absolute;
       top: 12px;
       right: 12px;
-      background: #8b7355;
-      color: #050810;
-      border: none;
+      background: rgba(212, 175, 55, 0.1);
+      color: var(--color-accent-gold);
+      border: 1px solid rgba(212, 175, 55, 0.3);
       width: 36px;
       height: 36px;
       border-radius: 50%;
@@ -171,28 +175,31 @@
     }
 
     .modal-close:hover {
-      background: #a68b5b;
+      background: rgba(212, 175, 55, 0.2);
+      border-color: rgba(212, 175, 55, 0.5);
       transform: scale(1.1);
     }
 
     /* Modal Content Styling */
     #modal-body {
-      color: #e0dcd4;
+      color: #f0ede7;
       font-size: 15px;
-      line-height: 1.7;
-      letter-spacing: 0.2px;
+      line-height: 1.9;
+      letter-spacing: 0;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
     }
 
     #modal-body h1 {
-      color: #d4af37;
+      color: var(--color-accent-gold);
       margin: 0 0 20px 0;
       font-size: 28px;
-      border-bottom: 2px solid #8b7355;
+      border-bottom: 2px solid var(--color-accent-gold);
       padding-bottom: 12px;
       text-transform: uppercase;
-      letter-spacing: 0.08em;
+      letter-spacing: 0.05em;
       font-weight: 700;
-      line-height: 1.2;
+      line-height: 1.3;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
     }
 
     #modal-body h1:first-child {
@@ -200,39 +207,43 @@
     }
 
     #modal-body h2 {
-      color: #a68b5b;
+      color: var(--color-accent-gold);
       margin: 28px 0 14px 0;
       font-size: 20px;
       text-transform: uppercase;
-      letter-spacing: 0.05em;
+      letter-spacing: 0.03em;
       font-weight: 600;
-      border-left: 3px solid #8b7355;
+      border-left: 3px solid var(--color-accent-gold);
       padding-left: 12px;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
     }
 
     #modal-body h3 {
-      color: #b89968;
+      color: rgba(212, 175, 55, 0.95);
       margin: 20px 0 10px 0;
       font-size: 16px;
       font-weight: 600;
       text-transform: uppercase;
-      letter-spacing: 0.05em;
+      letter-spacing: 0.03em;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
     }
 
     #modal-body p {
       margin: 14px 0;
-      line-height: 1.8;
-      color: #e0dcd4;
+      line-height: 1.9;
+      color: #f0ede7;
       font-size: 15px;
-      text-align: justify;
+      text-align: left;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
     }
 
     #modal-body ul,
     #modal-body ol {
       margin: 14px 0 14px 28px;
-      color: #e0dcd4;
+      color: #f0ede7;
       font-size: 15px;
-      line-height: 1.7;
+      line-height: 1.9;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
     }
 
     #modal-body li {
@@ -242,39 +253,40 @@
 
     #modal-body code {
       background-color: rgba(5, 8, 15, 0.9);
-      color: #b89968;
+      color: var(--color-accent-gold);
       padding: 3px 6px;
       border-radius: 3px;
       font-family: 'Courier New', monospace;
       font-size: 13px;
-      border: 1px solid #8b7355;
+      border: 1px solid var(--color-accent-gold);
     }
 
     #modal-body pre {
       background-color: rgba(0, 0, 0, 0.8);
-      border-left: 3px solid #8b7355;
+      border-left: 3px solid var(--color-accent-gold);
       padding: 14px;
       border-radius: 4px;
       overflow-x: auto;
       margin: 20px 0;
-      color: #b89968;
+      color: var(--color-accent-gold);
       font-size: 13px;
       line-height: 1.6;
     }
 
     #modal-body blockquote {
-      border-left: 3px solid #a68b5b;
+      border-left: 3px solid var(--color-accent-gold);
       padding: 14px;
       padding-left: 20px;
       margin: 20px 0;
-      background: rgba(139, 115, 85, 0.08);
-      color: #c9b8a0;
+      background: rgba(212, 175, 55, 0.08);
+      color: #f0ede7;
       font-style: italic;
       border-radius: 3px;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
     }
 
     #modal-body a {
-      color: #a68b5b;
+      color: var(--color-accent-gold);
       text-decoration: none;
       transition: all 0.2s ease;
       font-weight: 500;
@@ -282,24 +294,24 @@
     }
 
     #modal-body a:hover {
-      color: #d4af37;
-      border-bottom: 1px solid #d4af37;
+      color: #fff;
+      border-bottom: 1px solid var(--color-accent-gold);
     }
 
     #modal-body strong {
-      color: #d4af37;
+      color: var(--color-accent-gold);
       font-weight: 600;
     }
 
     #modal-body em {
-      color: #a68b5b;
+      color: var(--color-accent-gold);
       font-style: italic;
     }
 
     #modal-body hr {
       border: none;
       height: 1px;
-      background: rgba(139, 115, 85, 0.4);
+      background: rgba(212, 175, 55, 0.4);
       margin: 28px 0;
     }
 
@@ -308,17 +320,17 @@
     }
 
     .modal-content::-webkit-scrollbar-track {
-      background: rgba(139, 115, 85, 0.08);
+      background: rgba(212, 175, 55, 0.08);
       border-radius: 4px;
     }
 
     .modal-content::-webkit-scrollbar-thumb {
-      background: #8b7355;
+      background: var(--color-accent-gold);
       border-radius: 4px;
     }
 
     .modal-content::-webkit-scrollbar-thumb:hover {
-      background: #a68b5b;
+      background: rgba(212, 175, 55, 0.8);
     }
 
     @media (max-width: 768px) {
@@ -348,9 +360,20 @@
   </style>
 </head>
 <body>
-  <header class="header">
-    <h1>Warhammer 40K Factions</h1>
-    <a href="index.html" class="nav-btn">← Home</a>
+  <header>
+    <div class="header-content">
+      <div style="display: flex; align-items: center;">
+        <img src="./assets/logo.png" alt="AlchemyPaintOS Logo" class="header-logo">
+        <div class="header-title-group">
+          <h1 class="header-title">AlchemyPaintOS</h1>
+          <p class="header-tagline">The Painter's Compendium of the Dark Imperium</p>
+        </div>
+      </div>
+      <div class="nav-buttons">
+        <a href="index.html" class="nav-btn">Recipes</a>
+        <a href="honors.html" class="nav-btn">Grimoire</a>
+      </div>
+    </div>
   </header>
 
   <main>
